--- a/index.html
+++ b/index.html
@@ -101,8 +101,9 @@
   </div>
  
   <footer class=" text-center py-3">
-    <p>For any inquiries, please contact QUOSA at <a href="mailto:info@quosa.org">info@quosa.org</a>.</p>
+    <p>For any inquiries, please contact QUOSA at <a href="greatquosa2013@gmail.com">greatquosa2013@gmail.com</a>.</p>
     <p>&copy; 2023 QUOSA. All rights reserved.</p>
+    <p>Designed by <a href="https://github.com/arinzeatusiuba">Gwealth</a>.</p>
   </footer>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
